# SuperRay

./: CMakeLists.txt  LICENSE  README.md  SuperRayBasedUpdates.sln
conversion/: CMakeLists.txt
conversion/src/: scan_graph_projection.cpp
gridmap2D/: CMakeLists.txt  gridmap2D-config.cmake.in  package.xml  superray-gridmap2d-config.cmake.in
gridmap2D/CMakeModules/: CompilerSettings.cmake
gridmap2D/include/gridmap2D/: AbstractGrid2D.h  AbstractOccupancyGrid2D.h  Grid2D.h  Grid2DBase.h  Grid2DBaseImpl.h  Grid2DBaseImpl.hxx  Grid2DDataNode.h  Grid2DDataNode.hxx  Grid2DIterator.hxx  Grid2DKey.h  Grid2DNode.h  GridMap2DNode.h  OccupancyGrid2DBase.h  OccupancyGrid2DBase.hxx  Pointcloud.h  ScanGraph.h  gridmap2D_deprecated.h  gridmap2D_types.h
gridmap2D/include/gridmap2D_cullingregion/: CullingRegionGrid2D.h
gridmap2D/include/gridmap2D_superray/: SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayGrid2D.h
gridmap2D/include/superray_gridmap2d/: AbstractGrid2D.h  AbstractOccupancyGrid2D.h  CullingRegionGrid2D.h  Grid2D.h  Grid2DBase.h  Grid2DBaseImpl.h  Grid2DBaseImpl.hxx  Grid2DDataNode.h  Grid2DDataNode.hxx  Grid2DKey.h  Grid2DNode.h  OccupancyGrid2DBase.h  OccupancyGrid2DBase.hxx  Pointcloud.h  ScanGraph.h  SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayGrid2D.h  gridmap2D.h  gridmap2D_types.h  gridmap2D_utils.h  gridmap2d.h  gridmap2d_timing.h  gridmap2d_types.h  gridmap2d_utils.h
gridmap2D/src/: AbstractGrid2D.cpp  AbstractOccupancyGrid2D.cpp  CMakeLists.txt  CullingRegionGrid2D.cpp  Grid2D.cpp  Grid2DNode.cpp  Pointcloud.cpp  ScanGraph.cpp  SuperRayCloud.cpp  SuperRayGenerator.cpp  SuperRayGrid2D.cpp  example_cullingregionGrid2D.cpp  example_superrayGrid2D.cpp
gridmap2D/src/math/: CMakeLists.txt  Pose3D.cpp  Vector2.cpp
gridmap2D/src/testing/: CMakeLists.txt
gridmap3D/: CMakeLists.txt  gridmap3D-config.cmake.in  package.xml  superray-gridmap3d-config.cmake.in
gridmap3D/include/gridmap3D/: AbstractGrid3D.h  AbstractOccupancyGrid3D.h  Grid3D.h  Grid3DBase.h  Grid3DBaseImpl.h  Grid3DBaseImpl.hxx  Grid3DDataNode.h  Grid3DDataNode.hxx  Grid3DKey.h  Grid3DNode.h  OccupancyGrid3DBase.h  OccupancyGrid3DBase.hxx  Pointcloud.h  ScanGraph.h  gridmap3D.h  gridmap3D_deprecated.h  gridmap3D_timing.h  gridmap3D_types.h  inttype.h
gridmap3D/include/gridmap3D_cullingregion/: CullingRegionGrid3D.h
gridmap3D/include/gridmap3D_superray/: SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayGrid3D.h
gridmap3D/include/superray_gridmap3d/: AbstractGrid3D.h  AbstractOccupancyGrid3D.h  CullingRegionGrid3D.h  Grid3D.h  Grid3DBase.h  Grid3DBaseImpl.h  Grid3DBaseImpl.hxx  Grid3DDataNode.h  Grid3DDataNode.hxx  Grid3DKey.h  Grid3DNode.h  OccupancyGrid3DBase.h  OccupancyGrid3DBase.hxx  Pointcloud.h  ScanGraph.h  SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayGrid3D.h  gridmap3D_types.h  gridmap3D_utils.h  gridmap3d.h  gridmap3d_types.h  gridmap3d_utils.h
gridmap3D/src/: AbstractGrid3D.cpp  AbstractOccupancyGrid3D.cpp  CMakeLists.txt  CullingRegionGrid3D.cpp  Grid3D.cpp  Grid3DNode.cpp  Pointcloud.cpp  ScanGraph.cpp  SuperRayCloud.cpp  SuperRayGenerator.cpp  SuperRayGrid3D.cpp  example_cullingregionGrid3D.cpp  example_superrayGrid3D.cpp
gridmap3D/src/math/: CMakeLists.txt  Pose6D.cpp  Quaternion.cpp  Vector3.cpp
octomap/: CMakeLists.txt  package.xml  superray-octomap-config.cmake.in
octomap/include/cullingregion_octomap/: CullingRegionOcTree.h
octomap/include/octomap/: AbstractOcTree.h  AbstractOccupancyOcTree.h  ColorOcTree.h  CountingOcTree.h  MCTables.h  MapCollection.h  MapCollection.hxx  MapNode.h  MapNode.hxx  OcTree.h  OcTreeBase.h  OcTreeBaseImpl.h  OcTreeBaseImpl.hxx  OcTreeDataNode.h  OcTreeDataNode.hxx  OcTreeIterator.hxx  OcTreeKey.h  OcTreeNode.h  OcTreeStamped.h  OccupancyOcTreeBase.h  OccupancyOcTreeBase.hxx  Pointcloud.h  ScanGraph.h  octomap_deprecated.h  octomap_timing.h  octomap_types.h  octomap_utils.h
octomap/include/octomap_cullingregion/: CullingRegionOcTree.h
octomap/include/octomap_superray/: SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayOcTree.h
octomap/include/superray_octomap/: CullingRegionOcTree.h  SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayOcTree.h
octomap/src/: AbstractOcTree.cpp  AbstractOccupancyOcTree.cpp  CMakeLists.txt  ColorOcTree.cpp  CountingOcTree.cpp  CullingRegionOcTree.cpp  OcTree.cpp  OcTreeNode.cpp  OcTreeStamped.cpp  Pointcloud.cpp  ScanGraph.cpp  SuperRayCloud.cpp  SuperRayGenerator.cpp  SuperRayOcTree.cpp  example_cullingregionOcTree.cpp  example_superrayOcTree.cpp
octomap/src/math/: CMakeLists.txt  Pose6D.cpp  Quaternion.cpp  Vector3.cpp
quadmap/: CMakeLists.txt  package.xml  quadmap-config.cmake.in  superray-quadmap-config.cmake.in
quadmap/CMakeModules/: CMakeUninstall.cmake.in  CPackSettings.cmake
quadmap/include/quadmap/: AbstractOccupancyQuadTree.h  AbstractQuadTree.h  OccupancyQuadTreeBase.h  OccupancyQuadTreeBase.hxx  Pointcloud.h  QuadTree.h  QuadTreeBase.h  QuadTreeBaseImpl.h  QuadTreeBaseImpl.hxx  QuadTreeDataNode.h  QuadTreeDataNode.hxx  QuadTreeIterator.hxx  QuadTreeKey.h  QuadTreeNode.h  ScanGraph.h  quadmap.h  quadmap_deprecated.h  quadmap_timing.h  quadmap_types.h
quadmap/include/quadmap_cullingregion/: CullingRegionQuadTree.h
quadmap/include/quadmap_superray/: SuperRay.h  SuperRayCloud.h  SuperRayGenerator.h  SuperRayQuadTree.h
quadmap/include/superray_quadmap/: AbstractOccupancyQuadTree.h  AbstractQuadTree.h  CullingRegionQuadTree.h  OccupancyQuadTreeBase.h  OccupancyQuadTreeBase.hxx  Pointcloud.h  QuadTree.h  ScanGraph.h  (+14 more)
quadmap/src/: AbstractOccupancyQuadTree.cpp  AbstractQuadTree.cpp  CMakeLists.txt  CullingRegionQuadTree.cpp  Pointcloud.cpp  QuadTree.cpp  QuadTreeNode.cpp  ScanGraph.cpp  SuperRayCloud.cpp  SuperRayGenerator.cpp  SuperRayQuadTree.cpp  example_cullingregionQuadTree.cpp  example_superrayQuadTree.cpp
superray/: CMakeLists.txt  LICENSE.txt  package.xml  superrayConfig.cmake.in
superray/CMakeModules/: CPackSettings.cmake
superray/src/: CMakeLists.txt  SuperRayCloud.cpp  SuperRayGenerator.cpp  SuperRayOcTree.cpp
(+63 files in other folders)
