<package format="3">
  <name>superray-octomap</name>
  <version>0.0.0</version>
  <description>The SuperRay-OctoMap library implements a 3D occupancy grid mapping approach, providing data structures and mapping algorithms in C++. The octree map implementation is based on OctoMap library. See
  http://octomap.github.io for details.</description>

  <author email="youngsun.kwon@etri.re.kr">Youngsun Kwon</author>
  <maintainer email="youngsun.kwon@etri.re.kr">Youngsun Kwon</maintainer>
  <license>BSD</license>

  <depend>octomap</depend>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
